correct footer alignment

--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -46,10 +46,15 @@ div.footer-two-column-container {
 }
 
 div.footer-column {
-  display: block;
-  width: 100%;
-  margin-top: auto;
-  margin-bottom: auto;
+  &-left {
+    text-align: center;
+    margin: auto;
+  }
+
+  &-right {
+    text-align: center;
+    margin: auto;
+  }
 
   @include breakpoint($md) {
     width: 48.4375%;
@@ -78,8 +83,8 @@ ul.footer-links-list {
   margin-bottom: 2rem;
 
   li {
-    display: inline;
+    display: inline-block;
     list-style-type: none;
-    margin: 1rem;
+    margin: 0 1rem 0 1rem;
   }
 }
